--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
       background: #009444;
       color: white;
       border: none;
-      padding: 15px 25px; /* maior */
+      padding: 15px 25px;
       border-radius: 8px;
       cursor: pointer;
       margin: 8px;
-      font-size: 18px; /* maior */
+      font-size: 18px;
     }
 
     .btn:hover {
@@ -35,9 +35,9 @@
 
     .grid {
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(80px, 1fr)); /* bolinhas maiores */
+      grid-template-columns: repeat(10, 1fr); /* 🔹 10 colunas fixas */
       gap: 12px;
-      max-width: 800px;
+      max-width: 900px; /* largura para caber certinho */
       margin: 0 auto;
     }
 
@@ -48,7 +48,7 @@
       align-items: center;
       justify-content: center;
       border-radius: 50%;
-      background: #e0e0e0;
+      background: #bdbdbd;
       cursor: pointer;
       font-size: 20px;
       transition: 0.3s;
@@ -65,6 +65,12 @@
       color: white;
       font-weight: bold;
     }
+
+    .summary {
+      margin-top: 25px;
+      font-size: 18px;
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
@@ -78,23 +84,28 @@
 
   <div class="grid" id="grid"></div>
 
-  <!-- jsPDF -->
+  <div class="summary" id="summary"></div>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
 
   <script>
     const grid = document.getElementById("grid");
+    const summary = document.getElementById("summary");
     const totalNumbers = 100;
     let rifa = JSON.parse(localStorage.getItem("rifa")) || {};
 
     function renderGrid() {
       grid.innerHTML = "";
+      let vendidos = 0;
+
       for (let i = 1; i <= totalNumbers; i++) {
         const div = document.createElement("div");
         div.classList.add("number");
         div.textContent = i;
 
         if (rifa[i]) {
+          vendidos++;
           if (rifa[i].status === "pago") {
             div.classList.add("sold");
           } else if (rifa[i].status === "reservado") {
@@ -106,6 +117,13 @@
         div.onclick = () => mostrarInfo(i);
         grid.appendChild(div);
       }
+
+      atualizarResumo(vendidos);
+    }
+
+    function atualizarResumo(vendidos) {
+      const disponiveis = totalNumbers - vendidos;
+      summary.textContent = `Vendidos: ${vendidos} | Disponíveis: ${disponiveis}`;
     }
 
     function mostrarInfo(num) {
