--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
       align-items: center;
       justify-content: center;
       border-radius: 50%;
-      background: #bdbdbd;
+      background: #aee16b;
       cursor: pointer;
       font-size: 20px;
       transition: 0.3s;
     }
 
     .number.sold {
-      background: #009444;
+      background: #bdbdbd;
       color: white;
       font-weight: bold;
     }
