--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     }
 
     .btn {
-      background: #a8aaa9;
+      background: #24d700;
       color: white;
       border: none;
       padding: 15px 25px;
@@ -190,3 +190,4 @@
   </script>
 </body>
 </html>
+
